--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css"
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -17,7 +18,8 @@
         <h2>HTML</h2>
 
         <ul>
-          <li>The head section contains information/metadata on the webpage</li>
+          <li>Details what information is displayed on the webpage</li>
+          <li>The head section contains information/metadata not visible to the user</li>
           <li>The body section contains information visible to the user</li>
         </ul>
 
@@ -27,8 +29,9 @@
         <h2>CSS</h2>
 
         <ul>
-          <li></li>
-          <li></li>
+          <li>CSS sets out how a webpage is displayed to the user</li>
+          <li>you can change, width, height, background colour, box shadows and more</li>
+          <li>you can use a class selector ".class" to create a preset for your elements</li>
         </ul>
    
       </section>
